changed password input type

--- a/src/main/resources/templates/change-password.html
+++ b/src/main/resources/templates/change-password.html
@@ -36,7 +36,7 @@
                 <h2>Change password Form</h2>
                 <div class="form-group">
                     <div class="col-sm-9">
-                        <input type="text" th:field="*{oldPassword}" placeholder="Old Password"
+                        <input type="password" th:field="*{oldPassword}" placeholder="Old Password"
                                class="form-control" />
                         <label th:if="${#fields.hasErrors('oldPassword')}" th:errors="*{oldPassword}"
                                class="validation-message"></label>
@@ -47,7 +47,7 @@
                     <div class="col-sm-9">
                         <label	th:if="${#fields.hasErrors('newPassword')}" th:errors="*{newPassword}"
                                   class="validation-message"></label>
-                        <input type="text" th:field="*{newPassword}"
+                        <input type="password" th:field="*{newPassword}"
                                placeholder="New Password" class="form-control" />
                     </div>
                 </div>
