changed date placeholder

--- a/src/main/resources/templates/group/groupDetailsPlanning.html
+++ b/src/main/resources/templates/group/groupDetailsPlanning.html
@@ -124,7 +124,7 @@
                                                                 <input id="endDate"
                                                                        type="date"
                                                                        class="form-control"
-                                                                       placeholder="*Pytanie"
+                                                                       placeholder="*Aktywne do"
                                                                 />
                                                             </div>
                                                             <div class="custom-control">
