added date type switch on focus

--- a/src/main/resources/templates/group/groupDetailsPlanning.html
+++ b/src/main/resources/templates/group/groupDetailsPlanning.html
@@ -122,9 +122,10 @@
                                                             </div>
                                                             <div class="custom-control">
                                                                 <input id="endDate"
-                                                                       type="date"
+                                                                       type="text"
                                                                        class="form-control"
                                                                        placeholder="*Aktywne do"
+                                                                       onfocus="(this.type='date')"
                                                                 />
                                                             </div>
                                                             <div class="custom-control">
