--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -31,7 +31,7 @@
 	</button>
 	<div class="collapse navbar-collapse " id="navbarSupportedContent-555">
 		<ul class="navbar-nav ml-auto">
-			<li class="nav-item" sec:authorize="isAuthenticated()">
+			<li class="nav-item" sec:authorize="isAnonymous()">
 				<a class="nav-link" th:href="@{/}">Home
 					<span class="sr-only">(current)</span>
 				</a>
