--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<title>Material Design for Bootstrap</title>
+	<title>Zaloguj</title>
 	<!-- MDB icon -->
 	<link rel="icon" th:href="@{/img/mdb-favicon.ico}" type="image/x-icon">
 	<!-- Font Awesome -->
@@ -28,10 +28,10 @@
 	<a class="btn btn-success"th:href="@{/dashboard}">Dashboard</a>
 </div>
 
-<div sec:authorize="isAnonymous()">
-	<a class="btn btn-success" th:href="@{/login}">Login</a>
-	<a class="btn btn-primary" th:href="@{/register}">Register</a>
-</div>
+<!--<div sec:authorize="isAnonymous()">-->
+	<!--<a class="btn btn-success" th:href="@{/login}">Login</a>-->
+	<!--<a class="btn btn-primary" th:href="@{/register}">Register</a>-->
+<!--</div>-->
 <!--<div sec:authentication="name">-->
 	<!--The value of the "name" property of the authentication object should appear here.-->
 <!--</div>-->
