--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -50,8 +50,7 @@
                         <a href="">Zapomniałeś hasła?</a>
                     </div>
                     <div>
-                        <!-- Forgot password -->
-                        <a href="">Zarejestruj</a>
+                        <a th:href="@{/registration}">Zarejestruj</a>
                     </div>
                 </div>
 
